Fixed PuzzleBang heading alignment for mobile

--- a/source/components/puzzlebang/content/styles.scss
+++ b/source/components/puzzlebang/content/styles.scss
@@ -10,7 +10,7 @@
         font-family: 'Roboto Slab', sans-serif;
         font-size: 1em;
         font-weight: bold;
-        display: block;
+        display: inline;
         margin: auto;
     }
     #header h1 {
